Fix title header overflow

--- a/packages/evolution-legacy/src/styles/survey/_header.scss
+++ b/packages/evolution-legacy/src/styles/survey/_header.scss
@@ -10,18 +10,27 @@ header {
     display: flex;
     justify-content: space-between;
     padding: $xxs-size;
+
+    // Ensures the title text in the top navigation bar doesn't overflow
     h1 {
       opacity: 0.6;
       margin: 0;
+      width: 100%;
+      max-width: 180px;
       font-size: $font-size-small;
       font-weight: 300;
+      white-space: nowrap; /* Prevents the text from wrapping to the next line */
+      overflow: hidden; /* Hides the overflow text */
+      text-overflow: ellipsis; /* Adds an ellipsis to indicate hidden text */
     }
+
     ul {
       padding: 0;
       list-style: none;
       display: flex;
       margin: 0;
     }
+
     li {
       display: flex;
     }
